force-app/main/default/objects/Aqua_Pickup_Ticket__c/Aqua_Pickup_Ticket__c.object-meta.xml
<CustomObject>
    <label>Aqua Pickup Ticket</label>
    <nameField>
        <displayFormat>APT-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aqua Pickup Tickets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>