force-app/main/default/objects/Aqua_Pickup_Ticket__c/fields/Community__c.field-meta.xml
<CustomField>
    <fullName>Community__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Schema repair v2 2026-04-30</description>
    <label>Community</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Aqua Pickup Tickets (Community)</relationshipLabel>
    <relationshipName>Aqua_Pickup_Community</relationshipName>
    <type>Lookup</type>
</CustomField>