force-app/main/default/objects/Aqua_Pickup_Ticket__c/fields/Controllers_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>Controllers_Retrieved__c</fullName>
    <label>Controllers Retrieved</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>