force-app/main/default/objects/Aqua_Pickup_Ticket__c/fields/Device_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>Device_Retrieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Device Retrieved</label>
    <type>Checkbox</type>
</CustomField>