force-app/main/default/objects/Aqua_Pickup_Ticket__c/fields/Heads_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>Heads_Retrieved__c</fullName>
    <label>Heads Retrieved</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>