force-app/main/default/objects/Aqua_Pickup_Ticket__c/fields/Inventory_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Reconciled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inventory Reconciled</label>
    <type>Checkbox</type>
</CustomField>