force-app/main/default/objects/Aqua_Pickup_Ticket__c/fields/Pickup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Notes__c</fullName>
    <label>Pickup Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>