force-app/main/default/objects/Aqua_Pickup_Ticket__c/fields/Variance_Controllers__c.field-meta.xml
<CustomField>
    <fullName>Variance_Controllers__c</fullName>
    <description>Difference between controllers installed and controllers retrieved. Positive = missing.</description>
    <label>Variance — Controllers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>