force-app/main/default/objects/Aqua_Pickup_Ticket__c/fields/Variance_Heads__c.field-meta.xml
<CustomField>
    <fullName>Variance_Heads__c</fullName>
    <description>Difference between heads installed and heads retrieved. Positive = missing.</description>
    <label>Variance — Heads</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>